# jwst-fourier

./: .gitignore  README.md  setup.cfg
jwst_fourier/oneoverf/: __init__.py  one_over_f.py  oneoverf_step.py
jwst_fourier/pipeline/: __init__.py  calwebb_fourier1.py  calwebb_fourier2.py
scripts/: example.yaml  reduce_data.py  reduce_data_nb.py
