[metadata]
name = jwst-fourier
description = Processing fourier imaging data with JWST pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/jwst-fourier
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    jwst
